// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Skip Link Default With missing input data returns the right warning message 1`] = `
<test>
  <a
    class="ecl-skip-link"
    href=""
  >
    Skip to main content
  </a>
  <!-- ecl2-compliance: skip-link -->
  <div
    class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
  >
    <p
      class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
    >
      [skip-link] - The {{ href }} and {{ label }} properties need to be set and filled in.
    </p>
  </div>
</test>
`;

exports[`EC - Skip Link Default renders correctly 1`] = `
<test>
  <a
    class="ecl-skip-link"
    href="#top"
  >
    Skip to main content
  </a>
</test>
`;

exports[`EC - Skip Link Default renders correctly with extra attributes 1`] = `
<test>
  <a
    class="ecl-skip-link"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    href="#top"
  >
    Skip to main content
  </a>
</test>
`;

exports[`EC - Skip Link Default renders correctly with extra class names 1`] = `
<test>
  <a
    class="ecl-skip-link custom-class custom-class--test"
    href="#top"
  >
    Skip to main content
  </a>
</test>
`;
